//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Session {
  sid String [pk]
  expire DateTime [not null]
  sess Json [not null]
}

Table User {
  email String [unique, not null]
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  password String [not null]
  type Type [not null]
  updatedAt DateTime [not null]
  username String [unique]
  imageUrl String
  tokens Token [not null]
}

Table Admin {
  createdAt DateTime [default: `now()`, not null]
  email String [unique, not null]
  id String [pk]
  role String [not null, default: 'viewer']
  updatedAt DateTime [not null]
  username String [unique]
  verified Boolean [not null, default: false]
  password String [not null]
  imageUrl String
  teachers Teacher [not null]
}

Table Teacher {
  firstName String
  lastName String
  verified Boolean [not null, default: false]
  adminId String
  createdAt DateTime [default: `now()`, not null]
  email String [unique, not null]
  id String [pk]
  updatedAt DateTime [not null]
  username String [unique]
  verifiedTeacher Boolean [not null, default: false]
  password String [not null]
  imageUrl String
  bio String
  courses Course [not null]
  admin Admin
}

Table Student {
  firstName String
  lastName String
  createdAt DateTime [default: `now()`, not null]
  email String [unique, not null]
  id String [pk]
  updatedAt DateTime [not null]
  username String [unique]
  password String [not null]
  imageUrl String
  verified Boolean [not null, default: false]
  Chapter Chapter [not null]
  progress StudentProgress [not null]
  enrolledCourses Course [not null]
}

Table Token {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  emailToken String [unique]
  valid Boolean [not null, default: true]
  expiration DateTime [not null]
  userId String
  user User
}

Table Course {
  id String [pk]
  title String [not null]
  type String [not null]
  limit Int [not null]
  view String [not null, default: 'basic']
  teacherId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  banner String
  price Int [not null]
  categoryName String
  isFeatured Boolean [not null, default: false]
  isPublished Boolean [not null, default: false]
  description String
  chapters Chapter [not null]
  category Category
  teacher Teacher [not null]
  participants Student [not null]
}

Table Category {
  id String [pk]
  name String [unique, not null]
  courses Course [not null]
}

Table Chapter {
  id String [pk]
  title String [not null]
  videoUrl String
  position Int [not null]
  isPublished Boolean [not null, default: false]
  isFree Boolean [not null, default: false]
  courseId String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  studentId String
  description Json
  course Course [not null]
  Student Student
  studentProgress StudentProgress [not null]
}

Table StudentProgress {
  id String [pk]
  studentId String [not null]
  chapterId String [not null]
  isCompleted Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  chapter Chapter [not null]
  Student Student [not null]

  indexes {
    (studentId, chapterId) [unique]
  }
}

Enum Type {
  ADMIN
  TEACHER
  STUDENT
}

Ref: Teacher.adminId > Admin.id

Ref: Token.userId > User.id

Ref: Course.categoryName > Category.name

Ref: Course.teacherId > Teacher.id [delete: Cascade]

Ref: Chapter.courseId > Course.id [delete: Cascade]

Ref: Chapter.studentId > Student.id

Ref: StudentProgress.chapterId > Chapter.id [delete: Cascade]

Ref: StudentProgress.studentId > Student.id